@@ -4,7 +4,7 @@
  * Any other distribution or use of this source violates copyright.
 */
 const char *core_ogr_ng_cpp(void) {
-return "@(#)$Id: core_ogr_ng.cpp,v 1.32 2009/09/17 20:15:58 andreasb Exp $"; }
+return "@(#)$Id: core_ogr_ng.cpp,v 1.33 2009/10/03 05:40:39 stream Exp $"; }
 
 //#define TRACE
 
@@ -407,6 +407,7 @@ int selcoreGetPreselectedCoreForProject_ogr_ng()
             switch (detected_type)
             {
               case 0x09: cindex = 5; break; /* AMD: sse-k8. Wrong for sure. Too many different AMDs covered by type 9 */
+              case 0x0A: cindex = 2; break; /* VIA C7-M (at least) - mmx */
               case 0x0B: cindex = 4; break; /* P4:  sse-p4 */
               case 0x0D: cindex = 5; break; /* Pentium M: -k8 */
               case 0x13: cindex = 5; break; /* P4-Willamette: -k8 but -k8 and -p4 are very close */
