@@ -23,13 +23,14 @@ Version bump guide:
 Note: #xxxx refers to bug numbers as viewable on http://bugs.distributed.net/
 
 ==========================================================================
-Version change log: $Id: CHANGES.txt,v 1.75 2009/09/30 12:41:18 stream Exp $
+Version change log: $Id: CHANGES.txt,v 1.76 2009/10/03 05:40:40 stream Exp $
 ==========================================================================
 
 2.9100
 ------
 2.9106-514  fix: all: cannot run test or bench if OS doesn't support
                       cpu count detection.
+            imp: x86: Via C7-D/M Model D detection.
 
 2.9106-513  new: amd64: two new asm ogr64 cores added and selected 
                         as default (#4183)
